--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "canvas": "^3.1.0",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
   }
